Session 8 / Phase 4: delete 21 pure-rendering files, fix Pt3D.set() and ParamGui refs. Java3D removal complete; Phase 5 (Java 21) blocked pending brew install openjdk@21.
Deleted (planned 17 + 4 discovered during compile): BoxOfActin_Graphics, CapturingCanvas3D, ExamineViewerBehavior, ViewerBehavior, ArchShape, SphereSection, InitControl, EnvControl, EndRatesControl, MechControl, GraphicsControl, XLinkControl, ActAControl, MyoRatesControl, CellShapeControl, MiscRatesControl, RenderControl, BareButton, HistoPlotPanel, InertGuiHead, ParamGui.

Consequential fixes: AnchorNode + StaticFilSegment Pt3D.set()→setVals(); FileOps ParamGui.syncAllToParameters() else-blocks removed. Zero Java3D imports remain. Java 8 compile + 23-frame headless run confirmed.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>